<resources>
    <string name="app_name">EH Research</string>
    <string name="action_settings">Settings</string>
    <string name="dra_rate_app">Like it? Rate it!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="sending">Sending...</string>
    <string name="search">Search</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="empty_string" />
    <string name="share">Share</string>
    <string name="clear_cache">Clear cache</string>
    <string name="preview_rating">Preview rating</string>
    <string name="rate_app">Like the app? Rate it!</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="agree">I agree</string>
    <string name="disagree">I disagree</string>
    <string name="terms_of_use_refusal">Because you disagree with the General Terms of Use, the Euler Hermes Research App will now close. You can accept them if you open the app again.</string>
    <string name="read_more">READ MORE</string>
    <string name="logging_in">Logging in</string>
    <string name="login_error_title">Unable to connect</string>
    <string name="login_error_message">Check your login/password or check you Wi-Fi or cellular network.</string>
    <string name="register_error_message">Check your info or check you Wi-Fi or cellular network.</string>
    <string name="update_error_title">Unable to update information</string>
    <string name="update_error_message">Check your info or check you Wi-Fi or cellular network.</string>
    <string name="assistance">Assistance</string>
    <string name="limited_access">Limited access document</string>
    <string name="please_suscribe">Please suscribe/login to consult this publication.</string>
    <string name="recents_empty_title">You have no downloaded document.</string>
    <string name="recents_empty_message">To add documents to your Recents tab and thereby consult them offline, please open them first: it will be added automatically.</string>
    <string name="connect">Connect</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_search">Search</string>
    <string name="action_call">Call</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="action_send_email">Send email</string>
    <string name="action_add_contact">Add to contacts</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_filter">Filter</string>
    <string name="connect_desc">Sign in or Register for free to access the latest publications of Euler Hermes without restrictions.</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="fake_email">john.doe@gmail.com</string>
    <string name="password">Password</string>
    <string name="sign_in">Connect</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="register_accept_receive_info">I accept to receive information from Euler Hermes</string>
    <string name="eh_customer">I am a customer of Euler Hermes</string>
    <string name="register">Register</string>
    <string name="login_successful">Welcome %s</string>
    <string name="profile_updated">Your information has been updated</string>
    <string name="logged_out">Your are now logged out</string>
    <string name="register_successful_title">Registration successful</string>
    <string name="register_successful_message">Thank you for registering, you will shortly receive your password in your mailbox. Login with your credentials via the Connect button in the left menu.</string>
    <string name="register_error_title">Unable to register</string>
    <string name="register_error_name">Incorrect Last Name</string>
    <string name="register_error_forename">Incorrect First Name</string>
    <string name="register_error_email">Incorrect email</string>
    <string name="feedback_hint">Type your feedback here</string>
    <string name="enquiry_hint">Type your question here</string>
    <string name="topic">Topic</string>
    <string name="feedback">Feedback</string>
    <string name="enquiry">Enquiry</string>
    <string name="forgot_password_success_title">Password resetted successfully</string>
    <string name="forgot_password_success_message">A new password has been sent to the email address you provided.</string>
    <string name="feedback_success_title">Feedback sent</string>
    <string name="feedback_success_message">"Thanks for your feedback.
Your opinion matters."</string>
    <string name="forgot_password_error_title">Unable to Reset Password</string>
    <string name="feedback_error_title">Unable to send info</string>
    <string name="more_info_error_title">Unable to send info</string>
    <string name="contact_error_message">Check your info or check your Wi-Fi or cellular network.</string>
    <string name="company">Company</string>
    <string name="sector">Sector</string>
    <string name="job">Job title</string>
    <string name="department">Department</string>
    <string name="phone_prefix">Prefix</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="employees_range">Employees Range</string>
    <string name="sales_range">Sales Range</string>
    <string name="final_step">Final step to access content</string>
    <string name="small_update_success">Your information has been updated.</string>
    <string name="knowing_each_other_better">Knowing each other better</string>
    <string name="fragment_header_home">Home</string>
    <string name="fragment_header_trade_credit">Trade credit</string>
    <string name="fragment_header_solutions">Solutions</string>
    <string name="fragment_header_risk_map">Risk map</string>
    <string name="fragment_header_collection_map">Collection map</string>
    <string name="fragment_header_videos">Videos</string>
    <string name="fragment_header_our_team">Our team</string>
    <string name="fragment_header_recents">Recents</string>
    <string name="fragment_header_join_us_on_linked_in">Join us on Linked In</string>
    <string name="fragment_header_follow_us_on_twitter">Follow us on Twitter</string>
    <string name="fragment_header_contact">Contact</string>
    <string name="fragment_header_about">About</string>
    <string name="home_list_header">Latest Economic Research</string>
    <string name="our_products">Our products</string>
    <string name="category_economic_outlooks">Economic Outlooks</string>
    <string name="category_weekly_export_risk_outlooks">Weekly Export Risk Outlooks</string>
    <string name="category_country_reports">Country Reports</string>
    <string name="category_economic_insights">Economic Insights</string>
    <string name="category_industry_reports">Industry Reports</string>
    <string name="category_other">Other</string>
    <string name="doc_category_1">"This monthly publication provides you with our latest macroeconomic, insolvency and industry forecasts and also aims at leadership through our special reports. There are four kinds of Economic Outlooks:
- Macroeconomic and Country Risk Outlook (once every quarter for all countries with 2-pages on tier 1 countries)
- Business Insolvency Worldwide (twice a year with in-depth review of determinants for insolvency developments in top 30 countries)
- Global Sector Outlook (twice a year for the top 10 sectors in over 30 countries)
- Special Report (once every quarter)
We also update update our World Risk Map once a quarter following country reviews after our Country Risk Committee (CRC)"</string>
    <string name="doc_category_2">"Our Weekly Export Risk Outlook (WERO) is a short knowledge product focusing on emerging risks and countries in the headlines.
The WERO is published every Wednesday."</string>
    <string name="doc_category_3">"Following the Group Country Risk Committee (CRC), we are sharing our quarterly batch of Country Risk Reports which are in-depth reviews for top 60 countries and others on request.
Following the same committee, we update the world risk map."</string>
    <string name="doc_category_4">"Our Economic Insight series is a global knowledge series of 4-pages with no definite frequency which addresses a wide range of topics from country focus to sector reviews to cross-cutting theme analyses (cross-country or cross-sector comparisons).
They should be shared with anyone who wants to know more about economics."</string>
    <string name="doc_category_5">Our Industry reports are produced by Group Economic Research or jointly with Euler Hermes Local Team. This exclusive content provides in-depth analysis, trends and forecasts on several key industries in your country and the ones you work with.</string>
    <string name="latest_publications">Latest publications</string>
    <string name="latest_reports">Latest reports</string>
    <string name="key_figures">Key figures</string>
    <string name="strengths">Strengths</string>
    <string name="weaknesses">Weaknesses</string>
    <string name="gdp">GDP ($US bn)</string>
    <string name="gdp_per_capital">GDP per capita ($US)</string>
    <string name="population">Population</string>
    <string name="request_error">Sorry, an error has occured.</string>
    <string name="internet_error">No internet connection</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching…</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
</resources>