<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:textSize="20.0sp"
            android:textColor="#ffffffff"
            android:gravity="center_vertical"
            android:id="@+id/title"
            android:background="@color/main_blue"
            android:paddingLeft="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:text="Update my information"/>

    <ScrollView
            android:scrollbarStyle="outsideOverlay"
            android:padding="@dimen/default_spacing_minor"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <EditText
                    android:id="@+id/update_first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/update_last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/update_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fake_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/sector"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sector"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/job"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>

            <EditText
                    android:id="@+id/department"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>

            <Switch
                    android:textSize="12.0sp"
                    android:id="@+id/eh_customer"
                    android:paddingTop="@dimen/default_spacing_minor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textOn="@string/yes"
                    android:textOff="@string/no"
                    android:text="@string/eh_customer"/>

            <Switch
                    android:textSize="12.0sp"
                    android:id="@+id/receive_info"
                    android:paddingTop="@dimen/default_spacing_minor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textOn="@string/yes"
                    android:textOff="@string/no"
                    android:text="@string/register_accept_receive_info"/>

            <EditText
                    android:id="@+id/country"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/phone_prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_prefix"
                        android:inputType="phone"
                        android:imeOptions="actionNext"/>

                <EditText
                        android:id="@+id/phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:imeOptions="actionDone"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/employees_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10.0">

                <TextView
                        android:textSize="12.0sp"
                        android:textColor="?android:textColorSecondary"
                        android:id="@+id/employees_label"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/employees_range"
                        android:layout_weight="4.0"/>

                <Spinner
                        android:entries="@array/employees_range"
                        android:id="@+id/employees"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:prompt="@string/employees_range"
                        android:layout_weight="6.0"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10.0">

                <TextView
                        android:textSize="12.0sp"
                        android:textColor="?android:textColorSecondary"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_range"
                        android:layout_weight="4.0"/>

                <Spinner
                        android:entries="@array/sales_range"
                        android:id="@+id/sales"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:prompt="@string/sales_range"
                        android:layout_weight="6.0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ViewFlipper
            android:layout_gravity="bottom"
            android:id="@+id/signin_flipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <Button
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:id="@+id/update"
                android:background="@color/main_blue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"/>

        <ProgressBar
                android:layout_gravity="bottom|center"
                android:id="@android:id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </ViewFlipper>
</LinearLayout>